2018-08-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_register_label): Remove a useless 
	variable assignment.  Remove an unused argument.  Do not return 
	a value.

2018-08-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Infokey-config: Use C-x for aborting in echo area in 
	test suite.
	* info/t/echo-area-no-completions.sh,
	* info/t/index-apropos.sh: Update.

2018-08-07  Vitezslav Crhonek <vcrhonek@redhat.com>  (tiny change)

	* info/info.c (get_initial_file) <man page fallback>: Avoid
	leaking memory.

2018-08-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc (run_ginfo, timeout_test): Record process 
	ID of background process that does the timing out, and kill this 
	process if ginfo exited first.

2018-08-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.c (default_emacs_like_ea_keys)
	(default_vi_like_ea_keys): Remove ineffectual key bindings.
	Remove key bindings for sequences beginning with ESC, as these 
	have not worked since ESC was made an abort key.  Remove binding 
	for "C-x o" as it is not possible to escape the echo area any 
	more.  Remove bindings for SPC and ? which are self-inserting.

2018-08-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc: File removed.  All contents moved into
	Init-test.inc.

2018-08-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc (init_interactive_test): New function,
	containing commands that were at the top-level of this file.

2018-08-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc (run_ginfo): Run ginfo inside a subshell 
	with parentheses instead of using "sh -c".  This enables the use 
	of "$@" and avoids the need for an extra level of quoting when 
	calling run_ginfo.  Time out the process outside of the 
	subshell.

2018-08-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/echo-area-no-completions.sh: New test.

2018-08-07  Gavin Smith  <gavinsmith0123@gmail.com>
