@@ -1,5 +1,15 @@
 2018-08-09  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* tp/Texinfo/Common.pm (%default_parser_state_configuration):
+	Do not allow customizing the root parser context.
+	* tp/Texinfo/Parser.pm (parser, simple_parser, _parse_texi): 
+	Hard-code '_root' as the root context.
+	* tp/t/accents.t (test_accent_stack, test_enable_encoding):
+	Do not set 'context' on created parser.  Allow for an extra 
+	level of element nesting on the tree returned from the parser.
+
+2018-08-09  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* tp/Texinfo/Parser.pm (_register_label): Remove a useless 
 	variable assignment.  Remove an unused argument.  Do not return 
 	a value.
